--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+sqlalchemy
 dotenv
 requests
 browser_cookie3
@@ -5,6 +6,6 @@ BeautifulSoup4
 colorama
 bs4
 argparse
-psycopg2=2.8.6
+psycopg2==2.8.6
 python-dotenv==0.15.0
-elasticsearch=7.12.0
+elasticsearch==7.12.0
