--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+google
+httplib2
+googleapiclient
 sqlalchemy
 requests
 browser_cookie3
@@ -10,3 +13,6 @@ python-dotenv==0.15.0
 elasticsearch==7.12.0
 selenium==3.141.0
 pylint
+google-auth==1.30.0
+google-auth-oauthlib=0.4.4
+google-api-python-client
