--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ urllib3
 dotenv
 google
 httplib2
-googleapiclient
+google-api-python-client
 sqlalchemy
 requests
 browser_cookie3
@@ -16,5 +16,5 @@ elasticsearch==7.12.0
 selenium==3.141.0
 pylint
 google-auth==1.30.0
-google-auth-oauthlib=0.4.4
+google-auth-oauthlib==0.4.4
 google-api-python-client
